# jassen

./: .gitignore  CMakeLists.txt  Card.h  Deck.h  Game.cpp  Game.h  GameTypes.h  Generic.h  Player.h  main.cpp
python/: Env.py  Jass_env.py  Model.py
src/: Card.h  Deck.h  Game.h  GameTypes.h  Player.h  Wrapper.cpp  main.cpp
